# quickbloom

./: .gitignore  Makefile  README.md  bench_all.py  bloom_batched.c  bloom_impala.c  bloom_sbbf.c  bloom_single_key.c  bloom_unified.c  harness.py  qb_util.c  quickbloom.c  quickbloom.h  quickbloom.pc.in  test_bloom.py
.github/workflows/: ci.yml
comparisons/: README.md  binaryfusefilter.h  bloom_classic.c  bloom_krassovsky.c  bloom_xorfuse.c
comparisons/arrow_rs_sbbf_shim/: Cargo.toml
comparisons/arrow_rs_sbbf_shim/src/: lib.rs
comparisons/fastbloom_shim/: Cargo.toml
comparisons/fastbloom_shim/src/: lib.rs
comparisons/quickbloom_arrow_rs_shim/: Cargo.toml
comparisons/quickbloom_arrow_rs_shim/src/: lib.rs
examples/: hello_quickbloom.c
investigations/: PARQUET.md  UPSTREAMING.md
investigations/parquet_port/: .gitignore  Makefile  README.md  RESULTS.md  XSIMD_PORT.md
investigations/parquet_port/results/: run1.txt  run2.txt  run3_xsimd.txt  run4_raw_intrinsics_spr.txt  run5_xsimd_with_testc.txt  run6_raw_intrinsics_spr_20reps.txt  run7_xsimd_pure.txt  run8_raw_intrinsics_spr_fresh.txt
investigations/parquet_port/src/: bench.cpp  parquet_bloom.cpp  parquet_bloom.h  xxh64.cpp  xxh64.h
investigations/quickbloom_arrow_rs/: ISSUE_DRAFT.md  NEXT_STEPS.md  PR_DRAFT.md  PR_HANDOFF.md  README.md
investigations/quickbloom_arrow_rs/results/: run1.txt  run1_v1_partial.txt  run2.txt  run3.txt  run4_xl.txt  run5_post_hash_fix.txt  run6_lxl_post_fix.txt
test/: test_compat_arrow_rs.py  test_quickbloom.c
tools/: bench_atomic_insert.c  bench_hash.c  bench_qb.c  fuzz_deserialize.c  fuzz_fasthash_var.c  fuzz_insert.c  xxh64.h  xxh64_helper.c
